--- a/css/index.css
+++ b/css/index.css
@@ -29,21 +29,23 @@ section {
   font-weight: 300;
 }
 
-textarea {
+input{
   margin-top: 15px;
-  width: 415px;
+  width: 100px;
+  height: 100px;
   border: 0px;
   outline: none;
-  padding: 15px;
   color: #333333;
   border-radius: 10px;
   box-shadow: 9px 9px 20px -9px rgba(0, 0, 0, 0.55);
+  padding: 15px;
 }
 
-.textarea-encriptar::placeholder {
+.input-encriptar::placeholder {
+  
   font-size: 0.8rem;
-  padding: 5px;
   color: #bbbbbb;
+  
 }
 
 .instrucciones {
@@ -119,12 +121,11 @@ textarea {
 .subtitulo {
   font-size: 1.2rem;
   font-weight: 400;
-  margin-top: 35px;
+  margin-top: 30px;
 }
 
-.text-area-mensaje::placeholder {
+.input-mensaje::placeholder {
   font-size: 0.8rem;
-  padding: 5px;
   color: #bbbbbb;
 }
 
@@ -178,7 +179,8 @@ footer p {
 @media screen and (min-width: 320px) {
   main {
     width: 290px;
-    margin: 25px auto;
+    margin: 30px auto;
+    margin-top: 40px;
   }
   .titulo-principal {
     font-size: 1.5rem;
@@ -187,10 +189,11 @@ footer p {
     width: 260px;
     font-size: 0.9rem;
   }
-  textarea {
-    width: 250px;
+  input {
+    width: 260px;
+    height: 100px;
   }
-  .textarea-encriptar::placeholder {
+  .input-encriptar::placeholder {
     font-size: 0.7rem;
   }
   .instrucciones {
@@ -200,7 +203,7 @@ footer p {
     font-size: 1rem;
     margin-top: 35px;
   }
-  .text-area-mensaje::placeholder {
+  .input-mensaje::placeholder {
     font-size: 0.7rem;
   }
 
@@ -219,13 +222,14 @@ footer p {
     font-size: 2.1rem;
   }
   .descripcion {
-    width: 400px;
+    width: 390px;
     font-size: 1.2rem;
   }
-  textarea {
+  input {
     width: 370px;
+    height: 120px;
   }
-  .textarea-encriptar::placeholder {
+  .input-encriptar::placeholder {
     font-size: 0.8rem;
   }
   .instrucciones {
@@ -236,7 +240,7 @@ footer p {
     font-size: 1.2rem;
     margin-top: 35px;
   }
-  .text-area-mensaje::placeholder {
+  .input-mensaje::placeholder {
     font-size: 0.8rem;
   }
   footer p {
@@ -257,10 +261,11 @@ footer p {
     width: 450px;
     font-size: 1.2rem;
   }
-  textarea {
+  input {
     width: 420px;
+    height: 120px;
   }
-  .textarea-encriptar::placeholder {
+  .input-encriptar::placeholder {
     font-size: 0.9rem;
   }
   .instrucciones {
@@ -270,7 +275,7 @@ footer p {
   .subtitulo {
     font-size: 1.4rem;
   }
-  .text-area-mensaje::placeholder {
+  .input-mensaje::placeholder {
     font-size: 0.9rem;
   }
   footer p {
