--- a/css/index.css
+++ b/css/index.css
@@ -163,10 +163,41 @@ textarea {
 .btnCopiar:active {
   transform: translateY(4px);
 }
+.btnLimpiar {
+  padding-top: 15px;
+  margin-right: 10px;
+}
+
+.btnLimpiar {
+  width: 128px;
+  display: inline-block;
+  padding: 6px;
+  margin: 0 1.5em 0.3em 0;
+  border: 0.16em solid rgba(255, 255, 255, 0);
+  border-radius: 2em;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  color: #ffffff;
+  background-color: #b8d82b;
+  text-align: center;
+  transition: all 0.2s;
+  box-shadow: 9px 9px 20px -9px rgba(0, 0, 0, 0.55);
+  cursor: pointer;
+}
+
+.btnLimpiar:hover {
+  background-color: #5da719;
+}
+
+.btnLimpiar:active {
+  transform: translateY(4px);
+}
 
 footer {
   background-color: rgba(0, 0, 0, 0.541);
-  padding: 32px 0;
+  padding: 25px 0;
   text-align: center;
   margin-top: auto;
   color: white;
@@ -254,7 +285,7 @@ footer p {
 @media screen and (min-width: 1440px) {
   main {
     width: 450px;
-    margin: 120px 0 90px 300px;
+    margin: 100px 0 60px 300px;
   }
   .titulo-principal {
     width: 450px;
@@ -269,7 +300,7 @@ footer p {
     height: 120px;
   }
   .caja-encriptar::placeholder {
-    font-size: 0.9rem;
+    font-size: 0.8rem;
   }
   .instrucciones {
     width: 400px;
